objects/ccrz__E_CategoryI18N__c.object
<CustomObject>
    <description>Internationalization for Categories</description>
    <fields>
        <fullName>ccrz__CategoryI18NId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External reference id for this entry</description>
        <externalId>true</externalId>
        <label>Category I18N Ext Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Category__c</fullName>
        <description>Reference to the Category entry being localized</description>
        <label>Category</label>
        <referenceTo>ccrz__E_Category__c</referenceTo>
        <relationshipLabel>CategoryI18Ns</relationshipLabel>
        <relationshipName>CategoryI18Ns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__DataId__c</fullName>
        <description>B2B Commerce internal use only except when used with ccApiTestData.</description>
        <externalId>true</externalId>
        <inlineHelpText>B2B Commerce internal use only except when used with ccApiTestData.</inlineHelpText>
        <label>DataId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Locale__c</fullName>
        <description>The locale for this entry, such as &apos;en_US&apos;</description>
        <label>Locale</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__LongDescRT__c</fullName>
        <description>Long localized rich text description.</description>
        <label>LongDescRT</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__LongDesc__c</fullName>
        <description>The localized category long description.  The preference should be to use the RT version of this field and no longer set or use this field.</description>
        <label>LongDesc</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__SEOId__c</fullName>
        <description>A shortened name for the category. This is used when constructing friendly URLs.</description>
        <externalId>true</externalId>
        <inlineHelpText>A shortened name for the category. This is used when constructing friendly URLs.</inlineHelpText>
        <label>SEO Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ShortDescRT__c</fullName>
        <description>Short localized category description as rich text.</description>
        <label>ShortDescRT</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__ShortDesc__c</fullName>
        <description>Short localized category description.  The preference should be to use the RT version of this field and no longer set or use this field.</description>
        <label>ShortDesc</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>CC CategoryI18N</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CategoryI18N Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC CategoryI18Ns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>